--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/* 기본 폰트 변경 */
+* {
+  font-family: 'pretendard';
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +41,4 @@
     transform: rotate(360deg);
   }
 }
+
