Introduce 섹션 진행중

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,6 @@
 .deuNavDefaultLogo {
     background-image: url('../../assets/images/deuNavDefaultLogo.png');
     background-size: cover;
+    width: 293px;
+    height: 63px;
 }
