--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -93,3 +93,24 @@
     background-size: cover;
     border-radius: 12px;
 }
+    /* news 작대기 */
+.new_bar1 {
+    width: 25%;
+    height: 2px;
+    background: #414141;
+}
+.new_bar2 {
+    width: 50%;
+    height: 2px;
+    background: #414141;
+}
+.new_bar3 {
+    width: 75%;
+    height: 2px;
+    background: #414141;
+}
+.new_bar4 {
+    width: 100%;
+    height: 2px;
+    background: #414141;
+}
